    - Allow colons (:) in added filenames in Dpkg::Dist::Files, which can be
      present when the upstream version contains colons. Regression introduced
      in dpkg 1.18.0. Reported by Jakub Wilk <jwilk@debian.org>.
    - Future-proof tar invocations in Dpkg::Source::Archive for options that
      might become positional in the future, and by always placing function
      options first.
  * Packaging:
    - Make the libdpkg-dev package Multi-Arch:same.
    - Mark libio-string-perl as <!nocheck>.
  * Documentation:
    - Fix grammar in dpkg-architecture(1).
      Thanks to Chris Lamb <lamby@debian.org>. Closes: #787616
    - Use the feature area name in the dpkg-buildflags(1) subsection title.
    - Document DPKG_HOOK_ACTION also in dpkg(1) ENVIRONMENT section.
    - Clarify when some features where added in man pages.
    - Document --yet-to-unpack, --predep-packages and all --assert-<feature>
      commands as supported in both «dpkg --help» and dpkg(1).
    - Document abitable in dpkg-architecture(1).
    - Clarify that an architecture wildcard is a Debian thing in
      dpkg-architecture(1).
    - Document multiarch triplet in dpkg-architecture(1) TERMS section.
    - Remove “my” keyword from Dpkg perl modules function prototypes.
    - Say FUNCTIONS instead of METHODS for Dpkg modules when appropriate.
    - Fix POD syntax inside verbatim paragraph in Dpkg::Changelog.
    - Document and mark Dpkg::Arch as a public module.
    - Fix Dpkg::Changelog::Parse::changelog_parse documentation.

  [ Updated programs translations ]
  * Dutch (Frans Spiesschaert). Closes: #789097
  * Simplified Chinese (Zhou Mo). Closes: #787986
  * Turkish (Mert Dirik). Closes: #788211
  * Vietnamese (Trần Ngọc Quân).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

  [ Updated dselect translations ]
  * Dutch (Frans Spiesschaert). Closes: #789096

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
 